--- a/index.html
+++ b/index.html
@@ -16,25 +16,36 @@
 <body>
 <div id="bhs_header">
     <div class="bhs_headerWrap">
-        <h1><a href="#"><img src="/img/common/bhs_header_logo.png" width="380" height="50" alt="Bandai Hobby Site"></a></h1>
+        <h1><a href="#"><img src="img/common/bhs_header_logo.png" width="380" height="50" alt="Bandai Hobby Site"></a></h1>
         <div id="bhs_header_aside" class="clearfix">
             <div class="bhs_header_aside_sns">
                 <ul>
                     <li class="bhs_header_aside_search">
                         <form action="#" method="get">
                             <ul>
-                                <li class="bhs_header_aside_search_txt"><input type="text" value="" name="#" placeholder="Please enter product name"></li>
+                                <li class="bhs_header_aside_search_txt"><input type="text" value="" name="#" placeholder=" Please enter product name"></li>
                                 <li class="bhs_header_aside_search_btn"><input type="submit" value="Search"></li>
                             </ul>
                         </form>
                     </li>
-                    <li><a href="#" target="_blank"><img src="/img/common/bhs_header_sns_rss.png" width="24" height="24" alt="Bandai Hobby Site RSS"></a></li>
-                    <li><a href="#" target="_blank"><img src="/img/common/bhs_header_sns_fb.png" width="24" height="24" alt="Bandai Hobby Site Facebook"></a></li>
-                    <li><a href="#" target="_blank"><img src="/img/common/bhs_header_sns_tw.png" width="24" height="24" alt="Bandai Hobby Site Twitter"></a></li>
+                    <li><a href="#" target="_blank"><img src="img/common/bhs_header_sns_rss.png" width="24" height="24" alt="Bandai Hobby Site RSS"></a></li>
+                    <li><a href="#" target="_blank"><img src="img/common/bhs_header_sns_fb.png" width="24" height="24" alt="Bandai Hobby Site Facebook"></a></li>
+                    <li><a href="#" target="_blank"><img src="img/common/bhs_header_sns_tw.png" width="24" height="24" alt="Bandai Hobby Site Twitter"></a></li>
                     <li class="bhs_header_aside_lang_en"><a href="#"><p><span>For Oversea Customer</span></p></a></li>
                 </ul>
             </div>
         </div>
+    </div>
+</div>
+<div id="bhs_sub_navBox">
+    <div id="bhs_sub_megamenuWrap">
+        <ul class="bhs_sub_megamenu clearfix">
+            <li class="bhs_sub_megamenu_newpd"><a href="#"><h2><span><span class="bhs_mainttl">New product information</span><span class="bhs_subttl">NEW ITEM</span></span></h2></a></li>
+            <li class="bhs_sub_megamenu_gunpla"><a href="#"><h2><span><span class="bhs_mainttl">Gundam plastic</span><span class="bhs_subttl">GUNPLA</span></span></h2></a></li>
+            <li class="bhs_sub_megamenu_chapla"><a href="#"><h2><span><span class="bhs_mainttl">Character plastic Model</span><span class="bhs_subttl">CHARACTER</span></span></h2></a></li>
+            <li class="bhs_sub_megamenu_evc"><a href="#"><h2><span><span class="bhs_mainttl">Event campaign</span><span class="bhs_subttl">EVENT</span></span></h2></a></li>
+            <li class="bhs_sub_megamenu_hos"><a href="#" target="_blank"><h2><span><span class="bhs_mainttl">Tmall Online Shop</span><span class="bhs_subttl">TMALL</span></span></h2></a></li>
+        </ul>
     </div>
 </div>
 </body>
