--- a/index.html
+++ b/index.html
@@ -48,51 +48,51 @@
         </ul>
     </div>
 
-    <div id="lists">
-        <div class="bhs_sub_megamenu_open" id="searchGunpla" style="display: block;">
-            <div class="bhs_sub_header">
-                <h3>Search by brand</h3>
-                <ul class="bhs_sub_header_gunpla">
-                    <li><a href="#"><img src="img/common/h" width="128" height="54" alt="HG [High grade]"></a></li>
-                    <li><a href="#"><img src="/temp/o_1b75g3n6c1nnieagbed146t1pq67.jpg" width="128" height="54" alt="HG UNIVERSAL CENTURY"></a></li>
-                    <li><a href="#"><img src="/temp/o_1b6mcv7k51q8h17bo18kig41enn7.jpg" width="128" height="54" alt="RG [Real grade]"></a></li>
-                    <li><a href="#"><img src="/temp/o_1b6mddtf21h3314ud18i21sod1lje7.jpg" width="128" height="54" alt="MG [Master grade]"></a></li>
-                    <li><a href="#"><img src="/temp/o_1b6mdhbbd394g6dq857071nje7.jpg" width="128" height="54" alt="MG Ver.Ka [Master grade version Katoki]"></a></li>
-                    <li><a href="#"><img src="/temp/o_1b6mdlps219rh10l418gq131b18lm7.jpg" width="128" height="54" alt="RE / 100 [Reborn One Hand Red]"></a></li>
-                    <li><a href="#"><img src="/temp/o_1b6mdo11c1ot116s080c72g1fjt7.jpg" width="128" height="54" alt="PG [Perfect grade]"></a></li>
-                    <li><a href="#"><img src="/temp/o_1b77d1iv851uvlrc6nkqh16ut7.jpg" width="128" height="54" alt="Hi-Resolution Model [High Resolution Model]"></a></li>
-                    <li><a href="#"><img src="/temp/o_1c6ue3d5p1cnj1jdh1srn1p9rumu7.jpg" width="128" height="54" alt="SD Gundam Cross Silhouette"></a></li>
-                    <li><a href="#"><img src="/temp/o_1b6md2c7l1hmt9dlau8pvestn7.jpg" width="128" height="54" alt="SD Gundam BB Soldier"></a></li>
-                    <li><a href="#"><img src="/temp/o_1b6mdrkm93hu1utl1k66d0e1jjv7.jpg" width="128" height="54" alt="PETIT'GGUY/BEARGGUY"></a></li>
-                    <li><a href="#"><img src="/temp/o_1b6mducf91p5j153sh6l1qjr4r87.jpg" width="128" height="54" alt="Builder's Parts"></a></li>
-                    <li><a href="#"><img src="/temp/o_1cl0rau9m2na11kr33kqcm1gou7.jpg" width="128" height="54" alt="Gundam Decal"></a></li>
-                    <li><a href="#"><img src="/temp/o_1cl0tg7a7gaq1lad13bcduq1qli7.jpg" width="128" height="54" alt="Action base"></a></li>
-                    <li><a href="#"><img src="/temp/o_1d2u7394v5rnbue7al1b3ac3u7.jpg" width="128" height="54" alt="BANDAI SPIRITS entry nipper"></a></li>
-                </ul>
-                <div class="header_line"><hr></div>
-                <h3>Search from works</h3>
-                <ul class="bhs_sub_header_gunpla">
-                    <li><a href="#"><img src="/temp/o_1c58kni5k77420a16rt14hvelt7.jpg" width="128" height="54" alt="Gundam Build Divers"></a></li>
-                    <li><a href="#"><img src="/temp/o_1bre4jhhc1virfj31uscbs6thu7.jpg" width="128" height="54" alt="Mobile Suit Gundam UC [Unicorn]"></a></li>
-                    <li><a href="#"><img src="/temp/o_1b6mecaog16mr1je25hs1b0e1sos7.jpg" width="128" height="54" alt="Mobile Suit Gundam THE ORIGIN"></a></li>
-                    <li><a href="#"><img src="/temp/o_1b6me6l5nkdaj9714tr9houth7.jpg" width="128" height="54" alt="Mobile Suit Gundam SEED"></a></li>
-                    <li><a href="#"><img src="/temp/o_1d1b26j4410om9th1mtf6d79kt7.jpg" width="128" height="54" alt="Mobile Suit Gundam SEED DESTINY"></a></li>
-                    <li><a href="#"><img src="/temp/o_1b7i4dghjuvqfa1eqdpas1cf07.jpg" width="128" height="54" alt="Mobile Suit Gundam 00 [Double O]"></a></li>
-                    <li><a href="#"><img src="/temp/o_1cjl9abee5m617l71pcqp4rpelc.png" width="128" height="54" alt="Mobile Suit Gundam Gundam W Series"></a></li>
-                    <li><a href="#"><img src="/temp/o_1d2a6j1hge5q1f76lo4pp1af87.jpg" width="128" height="54" alt="Gundam Sentinel"></a></li>
-                    <li><a href="#"><img src="/temp/o_1concamqa71cfo1c9c3s18387.jpg" width="128" height="54" alt="Mobile Suit VS V Gundam"></a></li>
-                    <li><a href="#"><img src="/temp/o_1cjnbtfdo1asp1sfv1bfo14jg1f747.jpg" width="128" height="54" alt="Mobile Suit Gundam Char's Counter Attack"></a></li>
-                    <li><a href="#"><img src="/temp/o_1d0r5d96hvrf5ha1hkvdd10ar7.jpg" width="128" height="54" alt="Mobile Suit Gundam 0080 War in the Pocket"></a></li>
-                    <li><a href="#"><img src="/temp/o_1cr7io9b6nbt1itct35a0s6q7.jpg" width="128" height="54" alt="Mobile Suit Gundam ZZ"></a></li>
-                    <li><a href="#"><img src="/temp/o_1c6rs7er3abu1k906n3jipi007.jpg" width="128" height="54" alt="Mobile Suit Gundam F91"></a></li>
-                    <li><a href="#" target="_blank"><img src="/temp/o_1ciu156us1cub11uk1eke1i49f5p7.jpg" width="128" height="54" alt="Mobile Suit Gundam NT [Narrative]"></a></li>
-                    <li><a href="#"><img src="/temp/o_1d33nasb781211me1dbc1o6v1kd27.jpg" width="128" height="54" alt="Mikuni Shigenobu"></a></li>
-                </ul>
-                <div class="header_line"><hr></div>
-                <div class="bhs_header_gunpla_morelink"><a href="#"><span>View brand / work list</span></a></div>
-            </div>
-        </div>
-    </div>
+    <!--<div id="lists">-->
+        <!--<div class="bhs_sub_megamenu_open" id="searchGunpla" style="display: block;">-->
+            <!--<div class="bhs_sub_header">-->
+                <!--<h3>Search by brand</h3>-->
+                <!--<ul class="bhs_sub_header_gunpla">-->
+                    <!--<li><a href="#"><img src="img/common/h" width="128" height="54" alt="HG [High grade]"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1b75g3n6c1nnieagbed146t1pq67.jpg" width="128" height="54" alt="HG UNIVERSAL CENTURY"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1b6mcv7k51q8h17bo18kig41enn7.jpg" width="128" height="54" alt="RG [Real grade]"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1b6mddtf21h3314ud18i21sod1lje7.jpg" width="128" height="54" alt="MG [Master grade]"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1b6mdhbbd394g6dq857071nje7.jpg" width="128" height="54" alt="MG Ver.Ka [Master grade version Katoki]"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1b6mdlps219rh10l418gq131b18lm7.jpg" width="128" height="54" alt="RE / 100 [Reborn One Hand Red]"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1b6mdo11c1ot116s080c72g1fjt7.jpg" width="128" height="54" alt="PG [Perfect grade]"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1b77d1iv851uvlrc6nkqh16ut7.jpg" width="128" height="54" alt="Hi-Resolution Model [High Resolution Model]"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1c6ue3d5p1cnj1jdh1srn1p9rumu7.jpg" width="128" height="54" alt="SD Gundam Cross Silhouette"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1b6md2c7l1hmt9dlau8pvestn7.jpg" width="128" height="54" alt="SD Gundam BB Soldier"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1b6mdrkm93hu1utl1k66d0e1jjv7.jpg" width="128" height="54" alt="PETIT'GGUY/BEARGGUY"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1b6mducf91p5j153sh6l1qjr4r87.jpg" width="128" height="54" alt="Builder's Parts"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1cl0rau9m2na11kr33kqcm1gou7.jpg" width="128" height="54" alt="Gundam Decal"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1cl0tg7a7gaq1lad13bcduq1qli7.jpg" width="128" height="54" alt="Action base"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1d2u7394v5rnbue7al1b3ac3u7.jpg" width="128" height="54" alt="BANDAI SPIRITS entry nipper"></a></li>-->
+                <!--</ul>-->
+                <!--<div class="header_line"><hr></div>-->
+                <!--<h3>Search from works</h3>-->
+                <!--<ul class="bhs_sub_header_gunpla">-->
+                    <!--<li><a href="#"><img src="/temp/o_1c58kni5k77420a16rt14hvelt7.jpg" width="128" height="54" alt="Gundam Build Divers"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1bre4jhhc1virfj31uscbs6thu7.jpg" width="128" height="54" alt="Mobile Suit Gundam UC [Unicorn]"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1b6mecaog16mr1je25hs1b0e1sos7.jpg" width="128" height="54" alt="Mobile Suit Gundam THE ORIGIN"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1b6me6l5nkdaj9714tr9houth7.jpg" width="128" height="54" alt="Mobile Suit Gundam SEED"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1d1b26j4410om9th1mtf6d79kt7.jpg" width="128" height="54" alt="Mobile Suit Gundam SEED DESTINY"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1b7i4dghjuvqfa1eqdpas1cf07.jpg" width="128" height="54" alt="Mobile Suit Gundam 00 [Double O]"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1cjl9abee5m617l71pcqp4rpelc.png" width="128" height="54" alt="Mobile Suit Gundam Gundam W Series"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1d2a6j1hge5q1f76lo4pp1af87.jpg" width="128" height="54" alt="Gundam Sentinel"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1concamqa71cfo1c9c3s18387.jpg" width="128" height="54" alt="Mobile Suit VS V Gundam"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1cjnbtfdo1asp1sfv1bfo14jg1f747.jpg" width="128" height="54" alt="Mobile Suit Gundam Char's Counter Attack"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1d0r5d96hvrf5ha1hkvdd10ar7.jpg" width="128" height="54" alt="Mobile Suit Gundam 0080 War in the Pocket"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1cr7io9b6nbt1itct35a0s6q7.jpg" width="128" height="54" alt="Mobile Suit Gundam ZZ"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1c6rs7er3abu1k906n3jipi007.jpg" width="128" height="54" alt="Mobile Suit Gundam F91"></a></li>-->
+                    <!--<li><a href="#" target="_blank"><img src="/temp/o_1ciu156us1cub11uk1eke1i49f5p7.jpg" width="128" height="54" alt="Mobile Suit Gundam NT [Narrative]"></a></li>-->
+                    <!--<li><a href="#"><img src="/temp/o_1d33nasb781211me1dbc1o6v1kd27.jpg" width="128" height="54" alt="Mikuni Shigenobu"></a></li>-->
+                <!--</ul>-->
+                <!--<div class="header_line"><hr></div>-->
+                <!--<div class="bhs_header_gunpla_morelink"><a href="#"><span>View brand / work list</span></a></div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
 
 </div>
 <div id="bhs_contents">
