--- a/index.html
+++ b/index.html
@@ -14,87 +14,9 @@
     <script src="js/bootstrap.min.js"></script>
 </head>
 <body>
-<div id="bhs_header">
-    <div class="bhs_headerWrap">
-        <h1><a href="#"><img src="img/common/bhs_header_logo.png" width="380" height="50" alt="Bandai Hobby Site"></a></h1>
-        <div id="bhs_header_aside" class="clearfix">
-            <div class="bhs_header_aside_sns">
-                <ul>
-                    <li class="bhs_header_aside_search">
-                        <form action="#" method="get">
-                            <ul>
-                                <li class="bhs_header_aside_search_txt"><input type="text" value="" name="#" placeholder="Please enter product name"></li>
-                                <li class="bhs_header_aside_search_btn"><input type="submit" value="Search"></li>
-                            </ul>
-                        </form>
-                    </li>
-                    <li><a href="#" target="_blank"><img src="img/common/bhs_header_sns_rss.png" width="24" height="24" alt="Bandai Hobby Site RSS"></a></li>
-                    <li><a href="#" target="_blank"><img src="img/common/bhs_header_sns_fb.png" width="24" height="24" alt="Bandai Hobby Site Facebook"></a></li>
-                    <li><a href="#" target="_blank"><img src="img/common/bhs_header_sns_tw.png" width="24" height="24" alt="Bandai Hobby Site Twitter"></a></li>
-                    <li class="bhs_header_aside_lang_en"><a href="#"><p><span>Login(VIP)</span></p></a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
-<div id="bhs_sub_navBox">
-    <div id="bhs_sub_megamenuWrap">
-        <ul class="bhs_sub_megamenu clearfix">
-            <li class="bhs_sub_megamenu_newpd"><a href="#"><h2><span><span class="bhs_mainttl">NEW ITEM</span></span></h2></a></li>
-            <li class="bhs_sub_megamenu_gunpla"><a href="#"><h2><span><span class="bhs_mainttl">GUNPLA</span></span></h2></a></li>
-            <li class="bhs_sub_megamenu_chapla"><a href="#"><h2><span><span class="bhs_mainttl">Metal Build</span></span></h2></a></li>
-            <li class="bhs_sub_megamenu_evc"><a href="#"><h2><span><span class="bhs_mainttl">EVENT</span></span></h2></a></li>
-            <li class="bhs_sub_megamenu_hos"><a href="#" target="_blank"><h2><span><span class="bhs_mainttl">TMALL</span></span></h2></a></li>
-        </ul>
-    </div>
-
-    <!--<div id="lists">-->
-        <!--<div class="bhs_sub_megamenu_open" id="searchGunpla" style="display: block;">-->
-            <!--<div class="bhs_sub_header">-->
-                <!--<h3>Search by brand</h3>-->
-                <!--<ul class="bhs_sub_header_gunpla">-->
-                    <!--<li><a href="#"><img src="img/common/h" width="128" height="54" alt="HG [High grade]"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1b75g3n6c1nnieagbed146t1pq67.jpg" width="128" height="54" alt="HG UNIVERSAL CENTURY"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1b6mcv7k51q8h17bo18kig41enn7.jpg" width="128" height="54" alt="RG [Real grade]"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1b6mddtf21h3314ud18i21sod1lje7.jpg" width="128" height="54" alt="MG [Master grade]"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1b6mdhbbd394g6dq857071nje7.jpg" width="128" height="54" alt="MG Ver.Ka [Master grade version Katoki]"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1b6mdlps219rh10l418gq131b18lm7.jpg" width="128" height="54" alt="RE / 100 [Reborn One Hand Red]"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1b6mdo11c1ot116s080c72g1fjt7.jpg" width="128" height="54" alt="PG [Perfect grade]"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1b77d1iv851uvlrc6nkqh16ut7.jpg" width="128" height="54" alt="Hi-Resolution Model [High Resolution Model]"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1c6ue3d5p1cnj1jdh1srn1p9rumu7.jpg" width="128" height="54" alt="SD Gundam Cross Silhouette"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1b6md2c7l1hmt9dlau8pvestn7.jpg" width="128" height="54" alt="SD Gundam BB Soldier"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1b6mdrkm93hu1utl1k66d0e1jjv7.jpg" width="128" height="54" alt="PETIT'GGUY/BEARGGUY"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1b6mducf91p5j153sh6l1qjr4r87.jpg" width="128" height="54" alt="Builder's Parts"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1cl0rau9m2na11kr33kqcm1gou7.jpg" width="128" height="54" alt="Gundam Decal"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1cl0tg7a7gaq1lad13bcduq1qli7.jpg" width="128" height="54" alt="Action base"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1d2u7394v5rnbue7al1b3ac3u7.jpg" width="128" height="54" alt="BANDAI SPIRITS entry nipper"></a></li>-->
-                <!--</ul>-->
-                <!--<div class="header_line"><hr></div>-->
-                <!--<h3>Search from works</h3>-->
-                <!--<ul class="bhs_sub_header_gunpla">-->
-                    <!--<li><a href="#"><img src="/temp/o_1c58kni5k77420a16rt14hvelt7.jpg" width="128" height="54" alt="Gundam Build Divers"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1bre4jhhc1virfj31uscbs6thu7.jpg" width="128" height="54" alt="Mobile Suit Gundam UC [Unicorn]"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1b6mecaog16mr1je25hs1b0e1sos7.jpg" width="128" height="54" alt="Mobile Suit Gundam THE ORIGIN"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1b6me6l5nkdaj9714tr9houth7.jpg" width="128" height="54" alt="Mobile Suit Gundam SEED"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1d1b26j4410om9th1mtf6d79kt7.jpg" width="128" height="54" alt="Mobile Suit Gundam SEED DESTINY"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1b7i4dghjuvqfa1eqdpas1cf07.jpg" width="128" height="54" alt="Mobile Suit Gundam 00 [Double O]"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1cjl9abee5m617l71pcqp4rpelc.png" width="128" height="54" alt="Mobile Suit Gundam Gundam W Series"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1d2a6j1hge5q1f76lo4pp1af87.jpg" width="128" height="54" alt="Gundam Sentinel"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1concamqa71cfo1c9c3s18387.jpg" width="128" height="54" alt="Mobile Suit VS V Gundam"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1cjnbtfdo1asp1sfv1bfo14jg1f747.jpg" width="128" height="54" alt="Mobile Suit Gundam Char's Counter Attack"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1d0r5d96hvrf5ha1hkvdd10ar7.jpg" width="128" height="54" alt="Mobile Suit Gundam 0080 War in the Pocket"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1cr7io9b6nbt1itct35a0s6q7.jpg" width="128" height="54" alt="Mobile Suit Gundam ZZ"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1c6rs7er3abu1k906n3jipi007.jpg" width="128" height="54" alt="Mobile Suit Gundam F91"></a></li>-->
-                    <!--<li><a href="#" target="_blank"><img src="/temp/o_1ciu156us1cub11uk1eke1i49f5p7.jpg" width="128" height="54" alt="Mobile Suit Gundam NT [Narrative]"></a></li>-->
-                    <!--<li><a href="#"><img src="/temp/o_1d33nasb781211me1dbc1o6v1kd27.jpg" width="128" height="54" alt="Mikuni Shigenobu"></a></li>-->
-                <!--</ul>-->
-                <!--<div class="header_line"><hr></div>-->
-                <!--<div class="bhs_header_gunpla_morelink"><a href="#"><span>View brand / work list</span></a></div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-
-</div>
+<header>
+    <iframe src="header.html" frameborder="0" scrolling="no" class="my_header"></iframe>
+</header>
 <div id="bhs_contents">
     <div id="demoCarousel" class="carousel" data-ride="carousel">
         <div class="carousel-inner">
@@ -283,56 +205,8 @@
         </div>
     </div>
 </div>
-<div id="bhs_footer">
-    <div id="bhs_footer_boiler">
-        <ul>
-            <li>
-                <dl>
-                    <dt>New product information</dt>
-                    <dd><a href="#">New item of this month</a></dd>
-                    <dd><a href="#">New items since next month</a></dd>
-                </dl>
-            </li>
-            <li>
-                <dl>
-                    <dt>GUNPLA</dt>
-                    <dd><a href="#">Search by brand</a></dd>
-                    <dd><a href="#">Search from works</a></dd>
-                    <dd><a href="#">What is Gundam?</a></dd>
-                </dl>
-            </li>
-            <li>
-                <dl>
-                    <dt>Character Plastic Model</dt>
-                    <dd><a href="#">Search by brand</a></dd>
-                    <dd><a href="#">Search from works</a></dd>
-                </dl>
-            </li>
-            <li>
-                <dl>
-                    <dd><a href="#">Event</a></dd>
-                    <dd><a href="#">campaign</a></dd>
-                    <dd><a href="#">Hobby Online Shop</a></dd>
-                </dl>
-            </li>
-            <li>
-                <dl class="bhs_footer_boiler_mini">
-                    <dd><a href="#">Caution regarding tool handling</a></dd>
-                    <dd><a href="#">Parts mail order · Customer support</a></dd>
-                    <dd><a href="#">questionnaire</a></dd>
-                    <dd><a href="#">Notice</a></dd>
-                </dl>
-            </li>
-        </ul>
-    </div>
-    <div id="bhs_footer_cr_bd">
-        <div class="bhs_footer_copy">
-            <a href="#">
-                <img src="img/common/ft_logo.png">
-                <span>© BANDAI SPIRITS 1971-2018<br>We will refuse all images, sentences, data etc. posted on this homepage without permission and reprint. Unauthorized use or reproduction of materials contained in this page is strictly prohibited. </span>
-            </a>
-        </div>
-    </div>
-</div>
+<footer>
+    <iframe src="footer.html" frameborder="0" scrolling="no" class="my_footer"></iframe>
+</footer>
 </body>
 </html>
