--- a/gunpla_hg_list.html
+++ b/gunpla_hg_list.html
@@ -117,107 +117,107 @@
                     <li class="next"><a href="#">next ›</a></li>
                 </ul>
                 <ol class="bhs_pdlist_sbs">
-                    <li style="height: 178px;">
+                    <li>
                         <a href="#">
-                            <img src="img/hg_phenex.jpg" width="130" height="130">
+                            <img src="img/hg_phenex.jpg">
                             <p>
-                                <span class="bhs_pd_ttl" style="height: 72px;">HGUC 1/144 UNICORN GUNDAM 03 PHENEX (UNICORN MODE) (NARRATIVE Ver.)[GOLD COATING]</span>
+                                <span class="bhs_pd_ttl">HGUC 1/144 UNICORN GUNDAM 03 PHENEX (UNICORN MODE) (NARRATIVE Ver.)[GOLD COATING]</span>
                                 <span class="bhs_pd_price">Price: 5,400 yen (including tax 8%)</span>
                                 <span class="bhs_pd_deliver">Released in August 2019</span>
                             </p>
                         </a>
                     </li>
-                    <li style="height: 178px;">
+                    <li>
                         <a href="#">
-                            <img src="img/hg_gustav_carl_girlen.jpg" width="130" height="130">
+                            <img src="img/hg_gustav_carl_girlen.jpg">
                             <p>
-                                <span class="bhs_pd_ttl" style="height: 72px;">HG 1/144 Gustav Karl (Gyren's Ambition Ver.)</span>
+                                <span class="bhs_pd_ttl">HG 1/144 Gustav Karl (Gyren's Ambition Ver.)</span>
                                 <span class="bhs_pd_price">Price: 2,592 yen (including tax 8%)</span>
                                 <span class="bhs_pd_cat cat_shop">online shop</span>
                                 <span class="bhs_pd_deliver">Released in July 2019</span>
                             </p>
                         </a>
                     </li>
-                    <li style="height: 178px;">
+                    <li>
                         <a href="#">
-                            <img src="img/hg_destiny_heine.jpg" width="130" height="130">
+                            <img src="img/hg_destiny_heine.jpg">
                             <p>
-                                <span class="bhs_pd_ttl" style="height: 36px;">HGCE 1/144 DESTINY GUNDAM (HEINE WESTENFLUSS CUSTOM)</span>
+                                <span class="bhs_pd_ttl">HGCE 1/144 DESTINY GUNDAM (HEINE WESTENFLUSS CUSTOM)</span>
                                 <span class="bhs_pd_price">Price: 2,376 yen (8% tax included)</span>
                                 <span class="bhs_pd_deliver">Released in July 2019</span>
                             </p>
                         </a>
                     </li>
-                    <li style="height: 178px;">
+                    <li>
                         <a href="#">
-                            <img src="img/hg_silver_bullet.jpg" width="130" height="130">
+                            <img src="img/hg_silver_bullet.jpg">
                             <p>
-                                <span class="bhs_pd_ttl" style="height: 36px;">HGUC 1/144 SILVER BULLET SUPPRESSOR</span>
+                                <span class="bhs_pd_ttl">HGUC 1/144 SILVER BULLET SUPPRESSOR</span>
                                 <span class="bhs_pd_price">Price: 2,916 yen (including tax 8%)</span>
                                 <span class="bhs_pd_deliver">Released in June, 2019</span>
                             </p>
                         </a>
                     </li>
-                    <li style="height: 178px;">
+                    <li>
                         <a href="#">
-                            <img src="img/hg_zaku_cannon.jpg" width="130" height="130">
+                            <img src="img/hg_zaku_cannon.jpg">
                             <p>
-                                <span class="bhs_pd_ttl" style="height: 36px;">HG 1/144 Zaku Cannon</span>
+                                <span class="bhs_pd_ttl">HG 1/144 Zaku Cannon</span>
                                 <span class="bhs_pd_price">Price: 2,376 yen (8% tax included)</span>
                                 <span class="bhs_pd_cat cat_shop">online shop</span>
                                 <span class="bhs_pd_deliver">Released in June, 2019</span>
                             </p>
                         </a>
                     </li>
-                    <li style="height: 178px;">
+                    <li>
                         <a href="#">
-                            <img src="img/hg_Gparts_actual_deployment.jpg" width="130" height="130">
+                            <img src="img/hg_Gparts_actual_deployment.jpg">
                             <p>
-                                <span class="bhs_pd_ttl" style="height: 36px;">HG 1/144 G Parts [Furudo] (actual deployment color)</span>
+                                <span class="bhs_pd_ttl">HG 1/144 G Parts [Furudo] (actual deployment color)</span>
                                 <span class="bhs_pd_price">Price: 1,188 yen (including tax 8%)</span>
                                 <span class="bhs_pd_cat cat_shop">online shop</span>
                                 <span class="bhs_pd_deliver">Released in June, 2019</span>
                             </p>
                         </a>
                     </li>
-                    <li style="height: 178px;">
+                    <li>
                         <a href="#">
-                            <img src="img/hg_gundam_tr1_tr6.jpg" width="130" height="130">
+                            <img src="img/hg_gundam_tr1_tr6.jpg">
                             <p>
-                                <span class="bhs_pd_ttl" style="height: 54px;">HG 1/144 Gundam TR - 1 [Advanced Haze] &amp; Gundam TR - 6 Expansion Parts</span>
+                                <span class="bhs_pd_ttl">HG 1/144 Gundam TR - 1 [Advanced Haze] &amp; Gundam TR - 6 Expansion Parts</span>
                                 <span class="bhs_pd_price">Price: 1,836 yen (8% tax included)</span>
                                 <span class="bhs_pd_cat cat_shop">online shop</span>
                                 <span class="bhs_pd_deliver">Released in June, 2019</span>
                             </p>
                         </a>
                     </li>
-                    <li style="height: 178px;">
+                    <li>
                         <a href="#">
-                            <img src="img/hg_double_o_clear.jpg" width="130" height="130">
+                            <img src="img/hg_double_o_clear.jpg">
                             <p>
-                                <span class="bhs_pd_ttl" style="height: 54px;">HGBD 1/144 Gundam Double Ocean [Dive Into Dimension Clear]</span>
+                                <span class="bhs_pd_ttl">HGBD 1/144 Gundam Double Ocean [Dive Into Dimension Clear]</span>
                                 <span class="bhs_pd_price">Price: 1,620 yen (8% tax included)</span>
                                 <span class="bhs_pd_cat cat_event">Event</span>
                                 <span class="bhs_pd_deliver">Released in May, 2019</span>
                             </p>
                         </a>
                     </li>
-                    <li style="height: 178px;">
+                    <li>
                         <a href="#">
-                            <img src="img/hg_Gparts.jpg" width="130" height="130">
+                            <img src="img/hg_Gparts.jpg">
                             <p>
-                                <span class="bhs_pd_ttl" style="height: 54px;">HG 1/144 G Parts [Furudo]</span>
+                                <span class="bhs_pd_ttl">HG 1/144 G Parts [Furudo]</span>
                                 <span class="bhs_pd_price">Price: 1,188 yen (including tax 8%)</span>
                                 <span class="bhs_pd_cat cat_shop">online shop</span>
                                 <span class="bhs_pd_deliver">Released in May, 2019</span>
                             </p>
                         </a>
                     </li>
-                    <li style="height: 178px;">
+                    <li>
                         <a href="#">
-                            <img src="img/hg_gundam_tr1_extended.jpg" width="130" height="130">
+                            <img src="img/hg_gundam_tr1_extended.jpg">
                             <p>
-                                <span class="bhs_pd_ttl" style="height: 54px;">HG 1/144 Gundam TR - 1 [Haze - modified] &amp; extended parts for Gundam TR - 6</span>
+                                <span class="bhs_pd_ttl">HG 1/144 Gundam TR - 1 [Haze - modified] &amp; extended parts for Gundam TR - 6</span>
                                 <span class="bhs_pd_price">Price: 1,620 yen (8% tax included)</span>
                                 <span class="bhs_pd_cat cat_shop">online shop</span>
                                 <span class="bhs_pd_deliver">Released in May, 2019</span>
