--- a/index.html
+++ b/index.html
@@ -18,42 +18,116 @@
     <iframe src="header.html" frameborder="0" scrolling="no" class="my_header"></iframe>
 </header>
 <div id="bhs_contents">
-    <div id="demoCarousel" class="carousel" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="w-100" src="img/banner1.jpg" alt="">
+    <div class="container">
+        <input type="radio" name="slides" id="slide1" checked>
+        <input type="radio" name="slides" id="slide2">
+        <input type="radio" name="slides" id="slide3">
+        <input type="radio" name="slides" id="slide4">
+        <input type="radio" name="slides" id="slide5">
+        <input type="radio" name="slides" id="slide6">
+        <div class="slider">
+            <div class="img img1">
+                <div class="frag frag1"></div>
+                <div class="frag frag2"></div>
+                <div class="frag frag3"></div>
+                <div class="frag frag4"></div>
+                <div class="frag frag5"></div>
+                <div class="frag frag6"></div>
             </div>
-            <div class="carousel-item">
-                <img class="w-100" src="img/banner2.jpg" alt="">
+            <div class="img img2">
+                <div class="frag frag1"></div>
+                <div class="frag frag2"></div>
+                <div class="frag frag3"></div>
+                <div class="frag frag4"></div>
+                <div class="frag frag5"></div>
+                <div class="frag frag6"></div>
             </div>
-            <div class="carousel-item">
-                <img class="w-100" src="img/banner3.jpg" alt="">
+            <div class="img img3">
+                <div class="frag frag1"></div>
+                <div class="frag frag2"></div>
+                <div class="frag frag3"></div>
+                <div class="frag frag4"></div>
+                <div class="frag frag5"></div>
+                <div class="frag frag6"></div>
             </div>
-            <div class="carousel-item">
-                <img class="w-100" src="img/banner4.jpg" alt="">
+            <div class="img img4">
+                <div class="frag frag1"></div>
+                <div class="frag frag2"></div>
+                <div class="frag frag3"></div>
+                <div class="frag frag4"></div>
+                <div class="frag frag5"></div>
+                <div class="frag frag6"></div>
             </div>
-            <div class="carousel-item">
-                <img class="w-100" src="img/banner5.jpg" alt="">
+            <div class="img img5">
+                <div class="frag frag1"></div>
+                <div class="frag frag2"></div>
+                <div class="frag frag3"></div>
+                <div class="frag frag4"></div>
+                <div class="frag frag5"></div>
+                <div class="frag frag6"></div>
             </div>
-            <div class="carousel-item">
-                <img class="w-100" src="img/banner6.jpg" alt="">
+            <div class="img img6">
+                <div class="frag frag1"></div>
+                <div class="frag frag2"></div>
+                <div class="frag frag3"></div>
+                <div class="frag frag4"></div>
+                <div class="frag frag5"></div>
+                <div class="frag frag6"></div>
             </div>
         </div>
-        <a data-slide="prev" href="#demoCarousel" class="carousel-control-prev">
-            <span class="carousel-control-prev-icon"></span>
-        </a>
-        <a data-slide="next" href="#demoCarousel" class="carousel-control-next">
-            <span class="carousel-control-next-icon"></span>
-        </a>
-        <ul class="carousel-indicators">
-            <li data-target="#demoCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#demoCarousel" data-slide-to="1"></li>
-            <li data-target="#demoCarousel" data-slide-to="2"></li>
-            <li data-target="#demoCarousel" data-slide-to="3"></li>
-            <li data-target="#demoCarousel" data-slide-to="4"></li>
-            <li data-target="#demoCarousel" data-slide-to="5"></li>
-        </ul>
+        <div class="side-controls">
+            <label for="slide1"></label>
+            <label for="slide2"></label>
+            <label for="slide3"></label>
+            <label for="slide4"></label>
+            <label for="slide5"></label>
+            <label for="slide6"></label>
+        </div>
+        <div class="controls">
+            <label for="slide1"></label>
+            <label for="slide2"></label>
+            <label for="slide3"></label>
+            <label for="slide4"></label>
+            <label for="slide5"></label>
+            <label for="slide6"></label>
+        </div>
     </div>
+    <!--<div id="demoCarousel" class="carousel" data-ride="carousel">-->
+        <!--<div class="carousel-inner">-->
+            <!--<div class="carousel-item active">-->
+                <!--<img class="w-100" src="img/banner1.jpg" alt="">-->
+            <!--</div>-->
+            <!--<div class="carousel-item">-->
+                <!--<img class="w-100" src="img/banner2.jpg" alt="">-->
+            <!--</div>-->
+            <!--<div class="carousel-item">-->
+                <!--<img class="w-100" src="img/banner3.jpg" alt="">-->
+            <!--</div>-->
+            <!--<div class="carousel-item">-->
+                <!--<img class="w-100" src="img/banner4.jpg" alt="">-->
+            <!--</div>-->
+            <!--<div class="carousel-item">-->
+                <!--<img class="w-100" src="img/banner5.jpg" alt="">-->
+            <!--</div>-->
+            <!--<div class="carousel-item">-->
+                <!--<img class="w-100" src="img/banner6.jpg" alt="">-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<a data-slide="prev" href="#demoCarousel" class="carousel-control-prev">-->
+            <!--<span class="carousel-control-prev-icon"></span>-->
+        <!--</a>-->
+        <!--<a data-slide="next" href="#demoCarousel" class="carousel-control-next">-->
+            <!--<span class="carousel-control-next-icon"></span>-->
+        <!--</a>-->
+        <!--<ul class="carousel-indicators">-->
+            <!--<li data-target="#demoCarousel" data-slide-to="0" class="active"></li>-->
+            <!--<li data-target="#demoCarousel" data-slide-to="1"></li>-->
+            <!--<li data-target="#demoCarousel" data-slide-to="2"></li>-->
+            <!--<li data-target="#demoCarousel" data-slide-to="3"></li>-->
+            <!--<li data-target="#demoCarousel" data-slide-to="4"></li>-->
+            <!--<li data-target="#demoCarousel" data-slide-to="5"></li>-->
+        <!--</ul>-->
+    <!--</div>-->
     <div id="bhs_contentsWrap" class="clearfix">
         <div id="bhs_sideL">
             <div id="bhs_side_gunpla">
