--- a/gunpla_hg_list.html
+++ b/gunpla_hg_list.html
@@ -20,9 +20,9 @@
 <div id="bhs_navbar">
     <div class="bclist">
         <ul>
-            <li class="home"><a href="/">home</a></li>
-            <li><a href="/gunpla/">GUNPLA</a></li>
-            <li> HG [High grade]</li>
+            <li class="home"><a href="#">home</a></li>
+            <li><a href="#">GUNPLA</a></li>
+            <li>HG [High grade]</li>
         </ul>
     </div>
 </div>
@@ -119,7 +119,7 @@
                 <ol class="bhs_pdlist_sbs">
                     <li>
                         <a href="#">
-                            <img src="img/hg_phenex.jpg">
+                            <img src="img/hg_phenex.jpg" style="margin-top: -170px">
                             <p>
                                 <span class="bhs_pd_ttl">HGUC 1/144 UNICORN GUNDAM 03 PHENEX (UNICORN MODE) (NARRATIVE Ver.)[GOLD COATING]</span>
                                 <span class="bhs_pd_price">Price: 5,400 yen (including tax 8%)</span>
@@ -140,7 +140,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="img/hg_destiny_heine.jpg">
+                            <img src="img/hg_destiny_heine.jpg" style="margin-top: -170px">
                             <p>
                                 <span class="bhs_pd_ttl">HGCE 1/144 DESTINY GUNDAM (HEINE WESTENFLUSS CUSTOM)</span>
                                 <span class="bhs_pd_price">Price: 2,376 yen (8% tax included)</span>
@@ -150,7 +150,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="img/hg_silver_bullet.jpg">
+                            <img src="img/hg_silver_bullet.jpg" style="margin-top: -170px">
                             <p>
                                 <span class="bhs_pd_ttl">HGUC 1/144 SILVER BULLET SUPPRESSOR</span>
                                 <span class="bhs_pd_price">Price: 2,916 yen (including tax 8%)</span>
