--- a/item_3244.html
+++ b/item_3244.html
@@ -17,6 +17,112 @@
 <header>
     <iframe src="header.html" frameborder="0" scrolling="no" class="my_header"></iframe>
 </header>
+<div id="bhs_navbar">
+    <div class="bclist">
+        <ul>
+            <li class="home"><a href="#">home</a></li>
+            <li><a href="#">GUNPLA</a></li>
+            <li><a href="#">HG [High grade]</a></li>
+            <li>HGUC 1/144 UNICORN GUNDAM 03 PHENEX (UNICORN MODE) (NARRATIVE Ver.)[GOLD COATING]</li>
+        </ul>
+    </div>
+</div>
+<div id="bhs_contents">
+    <div id="bhs_contentsWrap" class="clearfix">
+        <div id="bhs_main_2col">
+            <div id="bhs_page_gunpla_detail">
+                <h2 class="bhs_main_title"><span>HGUC 1/144 UNICORN GUNDAM 03 PHENEX (UNICORN MODE) (NARRATIVE Ver.)[GOLD COATING]</span></h2>
+                <div id="bhs_gallery">
+                    <div id="bhs_gallery_main">
+                        <div class="bx-wrapper">
+                            <div class="bx-viewport">
+                                <span></span>
+                            </div>
+                        </div>
+                    </div>
+                    <ul id="bhs_gallery_thumbs" class="clearfix">
+                        <li><a href="#"><span><img src="img/detail_3244_1.jpg"></span></a></li>
+                        <li><a href="#"><span><img src="img/detail_3244_2.jpg"></span></a></li>
+                        <li><a href="#"><span><img src="img/detail_3244_3.jpg"></span></a></li>
+                        <li><a href="#"><span><img src="img/detail_3244_4.jpg"></span></a></li>
+                    </ul>
+                    <div id="bhs_pd_ontline">
+                        <table class="bhs_sale_table">
+                            <tbody>
+                            <tr><th>price</th>
+                                <td>
+                                    <span>5,400 yen</span> (tax included)
+                                </td>
+                            </tr>
+                            <tr><th>Release date</th><td>August 2019</td></tr>
+                            <tr><th>Target age</th><td>Over 8 years old</td></tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="bhs_detail_explain">
+                    <p>From "Mobile Suit Gundam NT", the NT version Fenex (unicorn mode) has a gold coating, and the exterior appears in super luxurious plating specifications!<br>■ Stabilizer connected to Armed Armor DE is movable every block.<br>■ Characteristic armament of unicorn Gundam is attached.<br><br>[INCLUDED ACCESSORIES]<br>■ Shield × 1<br>■ Armed Armor DE × 2<br>■ Hyper · Bazooka × 1<br>■ Beam saber blade × 2<br><br>[CONTENTS]<br>■ Molded item × 10<br>■ foil seal × 1<br>■ Instruction manual x 1<br>
+                    </p>
+                </div>
+                <div class="bhs_sale_notice">
+                    <ul>
+                        <li>&lt;Remarks&gt;</li>
+                        <li>The displayed price is the manufacturer suggested retail price (including tax of 8%) or premium Bandai selling price (including tax of 8%).</li>
+                        <li>※ Please understand that product photos and illustrations may differ slightly from actual products.</li>
+                        <li>※ Please understand that the product whose time has passed since the release may have ended production / sale.</li>
+                        <li>※ Product name, release date · price etc. Please note that information on this website may be subject to change.</li>
+                        <li>-Product specifications are planned as of May 2019. Please note that it may be changed.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div id="bhs_sideR">
+            <div id="bhs_side_ad">
+                <h3 class="bhs_title clearfix"><span>AD.</span></h3>
+                施工中
+            </div>
+            <div id="bhs_side_ranking">
+                <h3 class="bhs_title clearfix"><span>RANKING</span></h3>
+                <ol>
+                    <li class="rank01">
+                        <a href="#">
+                            <p class="bhs_rank_cd">
+                                <span class="bhs_rank_txt">RG 1/144 Gundam</span>
+                            </p>
+                        </a></li>
+                    <li class="rank02">
+                        <a href="#">
+                            <p class="bhs_rank_cd">
+                                <span class="bhs_rank_txt">HG 1/144 GRENDIZER(INFINITISM)</span>
+                            </p>
+                        </a></li>
+                    <li class="rank03">
+                        <a href="#">
+                            <p class="bhs_rank_cd">
+                                <span class="bhs_rank_txt">HG 1/144 MS-06S ZAKU II PRINCIPALITY OF ZEON CHAR AZNABLE’S MOBILE SUIT Red Comet Ver.</span>
+                            </p>
+                        </a></li>
+                    <li class="rank04">
+                        <a href="#">
+                            <p class="bhs_rank_cd">
+                                <span class="bhs_rank_txt">Light tiger</span>
+                            </p>
+                        </a></li>
+                    <li class="rank05">
+                        <a href="#">
+                            <p class="bhs_rank_cd">
+                                <span class="bhs_rank_txt">HG 1/144 ZAKU II TYPE C-6/R6</span>
+                            </p>
+                        </a></li>
+                </ol>
+            </div>
+            <div id="bhs_side_gallery">
+                <h3 class="bhs_title clearfix"><span>GALLERY</span></h3>
+                施工中
+            </div>
+        </div>
+    </div>
+</div>
 <footer>
     <iframe src="footer.html" frameborder="0" scrolling="no" class="my_footer"></iframe>
 </footer>
