--- a/gunpla_hg_list.html
+++ b/gunpla_hg_list.html
@@ -14,6 +14,11 @@
     <script src="js/bootstrap.min.js"></script>
 </head>
 <body>
+<div id="loading">
+    <div class="leftPic"></div>
+    <div class="rightPic"></div>
+    <span class="blingbling"></span>
+</div>
 <header>
     <iframe src="header.html" frameborder="0" scrolling="no" class="my_header"></iframe>
 </header>
@@ -286,5 +291,6 @@
 <footer>
     <iframe src="footer.html" frameborder="0" scrolling="no" class="my_footer"></iframe>
 </footer>
+<script src="js/hbs_js.js"></script>
 </body>
 </html>
