--- a/gunpla_hg_list.html
+++ b/gunpla_hg_list.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/hbs_style.css">
+    <link rel="stylesheet" href="css/hbs_style_header.css">
+    <link rel="stylesheet" href="css/hbs_style_footer.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -19,9 +21,40 @@
     <div class="rightPic"></div>
     <span class="blingbling"></span>
 </div>
-<header>
-    <iframe src="header.html" frameborder="0" scrolling="no" class="my_header"></iframe>
-</header>
+<div id="bhs_header">
+    <div class="bhs_headerWrap">
+        <h1><a href="#"><img src="img/common/bhs_header_logo.png" width="380" height="50" alt="Bandai Hobby Site"></a></h1>
+        <div id="bhs_header_aside" class="clearfix">
+            <div class="bhs_header_aside_sns">
+                <ul>
+                    <li class="bhs_header_aside_search">
+                        <form action="#" method="get">
+                            <ul>
+                                <li class="bhs_header_aside_search_txt"><input type="text" value="" name="#" placeholder="Please enter product name"></li>
+                                <li class="bhs_header_aside_search_btn"><input type="submit" value="Search"></li>
+                            </ul>
+                        </form>
+                    </li>
+                    <li><a href="#" target="_blank"><img src="img/common/bhs_header_sns_rss.png" width="24" height="24" alt="Bandai Hobby Site RSS"></a></li>
+                    <li><a href="#" target="_blank"><img src="img/common/bhs_header_sns_fb.png" width="24" height="24" alt="Bandai Hobby Site Facebook"></a></li>
+                    <li><a href="#" target="_blank"><img src="img/common/bhs_header_sns_tw.png" width="24" height="24" alt="Bandai Hobby Site Twitter"></a></li>
+                    <li class="bhs_header_aside_lang_en"><a href="#"><p><span>Login(VIP)</span></p></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+<div id="bhs_sub_navBox">
+    <div id="bhs_sub_megamenuWrap">
+        <ul class="bhs_sub_megamenu clearfix">
+            <li class="bhs_sub_megamenu_newpd"><a href="#"><h2><span><span class="bhs_mainttl">NEW ITEM</span></span></h2></a></li>
+            <li class="bhs_sub_megamenu_gunpla"><a href="#"><h2><span><span class="bhs_mainttl">GUNPLA</span></span></h2></a></li>
+            <li class="bhs_sub_megamenu_chapla"><a href="#"><h2><span><span class="bhs_mainttl">Metal Build</span></span></h2></a></li>
+            <li class="bhs_sub_megamenu_evc"><a href="#"><h2><span><span class="bhs_mainttl">EVENT</span></span></h2></a></li>
+            <li class="bhs_sub_megamenu_hos"><a href="#" target="_blank"><h2><span><span class="bhs_mainttl">TMALL</span></span></h2></a></li>
+        </ul>
+    </div>
+</div>
 <div id="bhs_navbar">
     <div class="bclist">
         <ul>
@@ -288,9 +321,57 @@
         </div>
     </div>
 </div>
-<footer>
-    <iframe src="footer.html" frameborder="0" scrolling="no" class="my_footer"></iframe>
-</footer>
+<div id="bhs_footer">
+    <div id="bhs_footer_boiler">
+        <ul>
+            <li>
+                <dl>
+                    <dt>New product information</dt>
+                    <dd><a href="#">New item of this month</a></dd>
+                    <dd><a href="#">New items since next month</a></dd>
+                </dl>
+            </li>
+            <li>
+                <dl>
+                    <dt>GUNPLA</dt>
+                    <dd><a href="#">Search by brand</a></dd>
+                    <dd><a href="#">Search from works</a></dd>
+                    <dd><a href="#">What is Gundam?</a></dd>
+                </dl>
+            </li>
+            <li>
+                <dl>
+                    <dt>Character Plastic Model</dt>
+                    <dd><a href="#">Search by brand</a></dd>
+                    <dd><a href="#">Search from works</a></dd>
+                </dl>
+            </li>
+            <li>
+                <dl>
+                    <dd><a href="#">Event</a></dd>
+                    <dd><a href="#">campaign</a></dd>
+                    <dd><a href="#">Hobby Online Shop</a></dd>
+                </dl>
+            </li>
+            <li>
+                <dl class="bhs_footer_boiler_mini">
+                    <dd><a href="#">Caution regarding tool handling</a></dd>
+                    <dd><a href="#">Parts mail order · Customer support</a></dd>
+                    <dd><a href="#">questionnaire</a></dd>
+                    <dd><a href="#">Notice</a></dd>
+                </dl>
+            </li>
+        </ul>
+    </div>
+    <div id="bhs_footer_cr_bd">
+        <div class="bhs_footer_copy">
+            <a href="#">
+                <img src="img/common/ft_logo.png">
+                <span>© BANDAI SPIRITS 1971-2018<br>We will refuse all images, sentences, data etc. posted on this homepage without permission and reprint. Unauthorized use or reproduction of materials contained in this page is strictly prohibited. </span>
+            </a>
+        </div>
+    </div>
+</div>
 <script src="js/hbs_js.js"></script>
 </body>
 </html>
